Send order notifications, added Hipercard

--- a/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
+++ b/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
@@ -187,6 +187,7 @@
             <option value="diners"><?php echo $this->__('Diners') ?></option>
             <option value="discover"><?php echo $this->__('Discover') ?></option>
             <option value="elo"><?php echo $this->__('Elo') ?></option>
+            <option value="hipercard"><?php echo $this->__('Hipercard') ?></option>
             <option value="mastercard"><?php echo $this->__('MasterCard') ?></option>
             <option value="visa"><?php echo $this->__('Visa') ?></option>
           </select>
