--- a/app/design/frontend/base/default/template/ebanx/standard/form.phtml
+++ b/app/design/frontend/base/default/template/ebanx/standard/form.phtml
@@ -1,3 +1,3 @@
-<ul class="form-list">
+<ul class="form-list" id="payment_form_ebanx_standard" style="display:none;">
   <li class="form-alt"><?php echo $this->__('You will be redirected to the EBANX website when you place an order.') ?></li>
 </ul>
