--- a/app/design/frontend/base/default/template/ebanx/express/form.phtml
+++ b/app/design/frontend/base/default/template/ebanx/express/form.phtml
@@ -146,9 +146,9 @@
     <div class="input-box">
       <div class="v-fix">
         <select id="ebanx_cc_installments" name="ebanx[installments]">
-          <option value="1">1x <?= $this->getCurrencySymbol() ?><?= money_format("%i", $this->getPriceUpfront()) ?> <?php echo $this->__('sem juros') ?></option>
+          <option value="1">1x <?php echo $this->getCurrencySymbol() ?><?php echo sprintf("%.2f", $this->getPriceUpfront()) ?> <?php echo $this->__('sem juros') ?></option>
           <?php foreach ($this->getInstallments() as $value => $total): ?>
-            <option value="<?= $value ?>"><?= $value ?>x <?= $this->getCurrencySymbol() ?><?= money_format("%i", $total / $value) ?> <?php echo $this->hasInterest ? $this->__('com juros') : $this->__('sem juros') ?></option>
+            <option value="<?php echo $value ?>"><?php echo $value ?>x <?php echo $this->getCurrencySymbol() ?><?php echo sprintf("%.2f", $total / $value) ?> <?php echo $this->hasInterest ? $this->__('com juros') : $this->__('sem juros') ?></option>
           <?php endforeach ?>
         </select>
       </div>
